work for the https://github.com/surveyjs/survey-library/issues/6776

--- a/src/defaultV2-theme/blocks/sd-boolean.scss
+++ b/src/defaultV2-theme/blocks/sd-boolean.scss
@@ -109,6 +109,7 @@
   box-shadow: none;
   transition: none;
   padding-left: 0;
+  background: $background-dark;
 
   .sd-boolean__thumb {
     box-shadow: inset 0px 0px 0px 2px $foreground;
