--- a/src/defaultV2-theme/blocks/sd-file.scss
+++ b/src/defaultV2-theme/blocks/sd-file.scss
@@ -426,6 +426,10 @@
   .sd-file__actions-container {
     display: none;
   }
+
+  .sd-file__image-wrapper {
+    background: $background-dark;
+  }
 }
 
 .sd-file--preview {
