work for the https://github.com/surveyjs/survey-library/issues/6776

--- a/src/defaultV2-theme/blocks/sd-file.scss
+++ b/src/defaultV2-theme/blocks/sd-file.scss
@@ -430,6 +430,10 @@
   .sd-file__image-wrapper {
     background: $background-dark;
   }
+
+  .sd-file__drag-area-placeholder {
+    color: $foreground;
+  }
 }
 
 .sd-file--preview {
