--- a/packages/survey-angular-ui/src/components/renderAs/boolean-radio/boolean-radio-item.component.html
+++ b/packages/survey-angular-ui/src/components/renderAs/boolean-radio/boolean-radio-item.component.html
@@ -5,7 +5,14 @@
       [attr.name]="question.name" [attr.aria-errormessage]="question.ariaErrormessage" [value]="value" [(ngModel)]="question.booleanValue"
       [disabled]="question.isInputReadOnly" [class]="question.cssClasses.itemRadioControl || ''"
     />
-    <span *ngIf="question.cssClasses.materialRadioDecorator" [class]="question.cssClasses.materialRadioDecorator"></span>
+    <span *ngIf="question.cssClasses.materialRadioDecorator" [class]="question.cssClasses.materialRadioDecorator">
+      <svg
+        *ngIf="question.itemSvgIcon"
+        [class]="question.cssClasses.itemRadioDecorator"
+      >
+        <use [attr.xlink:href]="question.itemSvgIcon"></use>
+      </svg>
+    </span>
     <span [class]="question.cssClasses.radioControlLabel" [model]="locText" sv-ng-string>
     </span>
   </label>
