--- a/packages/survey-angular-ui/src/questions/ranking-item.component.html
+++ b/packages/survey-angular-ui/src/questions/ranking-item.component.html
@@ -4,7 +4,8 @@
 <div [attr.tabindex]="question.getItemTabIndex(model)" [attr.data-sv-drop-target-ranking-item]="index" 
     [class]="question.getItemClass(model)"
     (keydown)="question.handleKeydown($event, model)"
-    (pointerdown)="question.handlePointerDown($event, model, $any($event.currentTarget))">
+    (pointerdown)="question.handlePointerDown($event, model, $any($event.currentTarget))"
+    (pointerup)="question.handlePointerUp($event, model, $any($event.currentTarget))">
   <div tabindex="-1" style="outline: none;">
     <div [class]="question.cssClasses.itemGhostNode"></div>
     <div [class]="question.cssClasses.itemContent">
