--- a/src/defaultV2-theme/variables.scss
+++ b/src/defaultV2-theme/variables.scss
@@ -160,6 +160,20 @@ $element-fade-out-duration: var(--sjs-element-fade-out-duration, 150ms);
 $element-move-out-duration: var(--sjs-element-move-out-duration, 250ms);
 $element-move-out-delay: var(--sjs-element-move-out-delay, 0ms);
 
+$matrix-row-fade-in-duration: var(--sjs-matrix-row-fade-in-duration, 250ms);
+$matrix-row-move-in-duration: var(--sjs-matrix-row-move-in-duration, 150ms);
+$matrix-row-fade-in-delay: var(--sjs-matrix-row-fade-in-delay, 150ms);
+$matrix-row-fade-out-duration: var(--sjs-matrix-row-fade-out-duration, 100ms);
+$matrix-row-move-out-duration: var(--sjs-matrix-row-move-out-duration, 250ms);
+$matrix-row-move-out-delay: var(--sjs-matrix-row-move-out-delay, 100ms);
+
+$matrix-detail-row-fade-in-duration: var(--sjs--fade-in-duration, 500ms);
+$matrix-detail-row-move-in-duration: var(--sjs-matrix-detail-row-move-in-duration, 150ms);
+$matrix-detail-row-fade-in-delay: var(--sjs-matrix-detail-row-fade-in-delay, 150ms);
+$matrix-detail-row-fade-out-duration: var(--sjs-matrix-detail-row-fade-out-duration, 150ms);
+$matrix-detail-row-move-out-duration: var(--sjs-matrix-detail-row-move-out-duration, 250ms);
+$matrix-detail-row-move-out-delay: var(--sjs-matrix-detail-row-move-out-delay, 100ms);
+
 $pd-tab-height-change-duration: var(--sjs-pd-tab-height-change-duration, 100ms);
 $pd-tab-height-change-delay: var(--sjs-pd-tab-height-change-delay, 0ms);
 $pd-tab-move-in-duration: var(--sjs-pd-tab-move-in-duration, 250ms);
