--- a/src/knockout/templates/question-matrixdynamic.html
+++ b/src/knockout/templates/question-matrixdynamic.html
@@ -118,8 +118,8 @@
     </thead>
     <!-- /ko -->
     <tbody>
-      <!-- ko foreach: question.koTable().rows -->
-      <!-- ko ifnot: ($parent.detailPanelMode === "popup" && $data.isDetailRow) || !$data.visible-->
+      <!-- ko foreach: { data: question.koTable().renderedRows, afterRender: question.koRowAfterRender } -->
+      <!-- ko ifnot: ($parent.detailPanelMode === "popup" && $data.isDetailRow)-->
       <tr data-bind="css: $data.className, attr: attributes, event: { pointerdown: function (model, event) { question.onPointerDown(event, row); return true;} }">
         <!-- ko foreach: $data.cells -->
         <!-- ko if: $data.isDragHandlerCell -->
