Fix padding animation is set incorrectly for complex questions

--- a/src/defaultV2-theme/blocks/sd-paneldynamic.scss
+++ b/src/defaultV2-theme/blocks/sd-paneldynamic.scss
@@ -144,6 +144,7 @@
 .sd-question--empty.sd-question--paneldynamic {
     & > .sd-question__content {
         padding-bottom: var(--sd-base-padding);
+        --animation-padding-bottom: var(--sd-base-padding);
     }
 }
 
