#8139 Dynamic panel (tab view). No room for search editor. Fixes #8139

--- a/src/common-styles/sv-list.scss
+++ b/src/common-styles/sv-list.scss
@@ -209,6 +209,7 @@ li:focus .sv-list__item.sv-list__item--selected {
   background: $background;
   box-sizing: border-box;
   width: 100%;
+  min-width: calcSize(30);
   outline: none;
   font-size: calcFontSize(1);
   color: $foreground;
