--- a/src/knockout/templates/question-matrixdynamic.html
+++ b/src/knockout/templates/question-matrixdynamic.html
@@ -119,7 +119,7 @@
     <!-- /ko -->
     <tbody>
       <!-- ko foreach: { data: question.koTable().renderedRows, afterRender: question.koRowAfterRender } -->
-      <!-- ko ifnot: ($parent.detailPanelMode === "popup" && $data.isDetailRow)-->
+      <!-- ko ifnot: ($parent.detailPanelMode === "popup" && $data.isDetailRow) || !$data.visible-->
       <tr data-bind="css: $data.className, attr: attributes, event: { pointerdown: function (model, event) { question.onPointerDown(event, row); return true;} }">
         <!-- ko foreach: $data.cells -->
         <!-- ko if: $data.isDragHandlerCell -->
