--- a/src/defaultV2-theme/blocks/sd-row.scss
+++ b/src/defaultV2-theme/blocks/sd-row.scss
@@ -56,7 +56,12 @@
     align-items: stretch;
   }
 }
-
+.sd-panel.sd-panel--as-page {
+  &>.sd-panel__content>.sd-row--multiple {
+    margin-left: calcSize(-2);
+    width: calc(100% + var(--base-unit) * 2);
+  }
+}
 .sd-panel:not(.sd-panel--as-page) {
   .sd-row--multiple {
     row-gap: var(--sd-base-vertical-padding);
