#8142 Panel in RTL layout looks broken Fixes #8142

--- a/src/defaultV2-theme/blocks/sd-collapsed-element.scss
+++ b/src/defaultV2-theme/blocks/sd-collapsed-element.scss
@@ -10,7 +10,7 @@
     padding: calcSize(0) var(--sd-base-padding);
     box-sizing: border-box;
     background-color: $background;
-    margin-left: calc(-1 * var(--sd-base-padding));
+    margin-inline-start: calc(-1 * var(--sd-base-padding));
     width: calc(100% + 2 * var(--sd-base-padding));
   }
 
