--- a/src/defaultV2-theme/defaultV2.m600.scss
+++ b/src/defaultV2-theme/defaultV2.m600.scss
@@ -18,7 +18,7 @@
     }
 
     .sd-element__title--expandable:before {
-      left: calcSize(-2.5);
+      inset-inline-start: calcSize(-2.5);
     }
 
     .sd-title.sd-container-modern__title {
