--- a/src/defaultV2-theme/blocks/sd-paneldynamic.scss
+++ b/src/defaultV2-theme/blocks/sd-paneldynamic.scss
@@ -296,7 +296,7 @@
     overflow: hidden;
     margin-left: calc(-1 * var(--sd-base-padding));
     padding-left: var(--sd-base-padding);
-    margin-left: calc(-1 * var(--sd-base-padding));
+    margin-right: calc(-1 * var(--sd-base-padding));
     padding-right: var(--sd-base-padding);
 }
 .sd-paneldynamic__panel-wrapper {
