#8119 Dynamic panel (tab view). The menu button doesn't appear Fixes #8119

--- a/src/knockout/templates/questiontitle.html
+++ b/src/knockout/templates/questiontitle.html
@@ -6,7 +6,7 @@
       <!-- ko template: { name: 'survey-string', data: $data.locDescription } --><!-- /ko -->
     </div>
     <!-- /ko -->
-    <!-- ko if: !!$data.additionalTitleToolbar -->
+    <!-- ko if: $data.hasAdditionalTitleToolbar -->
     <!-- ko component: { name: 'sv-action-bar', params: { model: $data.additionalTitleToolbar } } --><!-- /ko -->
     <!-- /ko -->
   </div>
