Implement paneldynamic and matrixdynamic animations (#8126)
* Refactor animation utils + Implement AnimationTab class

* Implement animations in PanelDynamic

* Implement matrixdynamic animations

* Fix collapsed styles for matrix questions

* Fix box-sizing for question's content

* Fix padding animation is set incorrectly for complex questions

* Fix separator animation causing scrollbar appear

* Fix overflow while animating height

* Fix angular and knockout builds

* Fix scrolling during paneldynamic animations

* Fix vr tests

* Fix focus new panel doesnt work when animation is disabled

* Fix styles

* Fix vr test

* small refactor

* Add unit test on onNextRender method

--- a/src/knockout/templates/question-matrixdynamic.html
+++ b/src/knockout/templates/question-matrixdynamic.html
@@ -118,7 +118,7 @@
     </thead>
     <!-- /ko -->
     <tbody>
-      <!-- ko foreach: question.koTable().rows -->
+      <!-- ko foreach: { data: question.koTable().renderedRows, afterRender: question.koRowAfterRender } -->
       <!-- ko ifnot: ($parent.detailPanelMode === "popup" && $data.isDetailRow) || !$data.visible-->
       <tr data-bind="css: $data.className, attr: attributes, event: { pointerdown: function (model, event) { question.onPointerDown(event, row); return true;} }">
         <!-- ko foreach: $data.cells -->
