--- a/packages/survey-angular-ui/src/questions/paneldynamic.component.html
+++ b/packages/survey-angular-ui/src/questions/paneldynamic.component.html
@@ -3,39 +3,38 @@
     <span [model]="model.locNoEntriesText" sv-ng-string></span>
     <sv-ng-paneldynamic-add-btn *ngIf="model.canAddPanel" [data]="{ question: model }"></sv-ng-paneldynamic-add-btn>
   </div>
-  <div [class]="model.cssClasses.progress" *ngIf="!model.showLegacyNavigation && model.isProgressTopShowing && model.isRangeShowing">
-    <div
-      [class]="model.cssClasses.progressBar"
-      [style]="{ width: model.progress }"
-      role="progressbar"
-    ></div>
+  <div [class]="model.cssClasses.progress"
+    *ngIf="!model.showLegacyNavigation && model.isProgressTopShowing && model.isRangeShowing">
+    <div [class]="model.cssClasses.progressBar" [style]="{ width: model.progress }" role="progressbar"></div>
   </div>
-  <ng-container [ngTemplateOutlet]="progress" *ngIf="model.showLegacyNavigation && model.isProgressTopShowing"></ng-container>
-  <!-- add track by [key]="panel.id" -->
-  <ng-container *ngFor="let panel of renderedPanels; index as index"> 
-    <div [class]="model.getPanelWrapperCss(panel)">
-      <ng-template [component]="{ name: getPanelComponentName(panel), data: getPanelComponentData(panel) }"></ng-template>
-      <ng-container *ngIf="model.panelRemoveButtonLocation ==='right' && model.canRemovePanel && panel.state != 'collapsed'">
-        <ng-template [component]="{ name: 'sv-paneldynamic-remove-btn', data: { data: { panel, question: model }}}"></ng-template>
-      </ng-container>
-    </div>
-    <!-- add track by [key]="'separator' + panel.id" -->
-    <hr [class]="model.cssClasses.separator" *ngIf="model.showSeparator(index)"/>
-  </ng-container>
-  <ng-container [ngTemplateOutlet]="progress" *ngIf="model.showLegacyNavigation && model.isProgressBottomShowing"></ng-container>
-  <sv-ng-paneldynamic-add-btn *ngIf="model.showLegacyNavigation && model.isRenderModeList" [data]="{ question: model }"></sv-ng-paneldynamic-add-btn>
+  <ng-container [ngTemplateOutlet]="progress"
+    *ngIf="model.showLegacyNavigation && model.isProgressTopShowing"></ng-container>
+  <div [class]="model.cssClasses.panelsContainer">
+    <ng-container *ngFor="let panel of model.renderedPanels; index as index; trackBy: trackPanelBy">
+      <div [class]="model.getPanelWrapperCss(panel)">
+        <ng-template
+          [component]="{ name: getPanelComponentName(panel), data: getPanelComponentData(panel) }"></ng-template>
+        <ng-container
+          *ngIf="model.panelRemoveButtonLocation ==='right' && model.canRemovePanel && panel.state != 'collapsed'">
+          <ng-template
+            [component]="{ name: 'sv-paneldynamic-remove-btn', data: { data: { panel, question: model }}}"></ng-template>
+        </ng-container>
+      </div>
+      <hr [class]="model.cssClasses.separator" *ngIf="model.showSeparator(index)" />
+    </ng-container>
+  </div>
+  <ng-container [ngTemplateOutlet]="progress"
+    *ngIf="model.showLegacyNavigation && model.isProgressBottomShowing"></ng-container>
+  <sv-ng-paneldynamic-add-btn *ngIf="model.showLegacyNavigation && model.isRenderModeList"
+    [data]="{ question: model }"></sv-ng-paneldynamic-add-btn>
   <ng-container [ngTemplateOutlet]="progressV2" *ngIf="model.showNavigation"></ng-container>
 </div>
 
 <ng-template #progressV2>
   <div [class]="model.cssClasses.footer" *ngIf="!!model.cssClasses.footer">
-    <hr [class]="model.cssClasses.separator"/>
+    <hr [class]="model.cssClasses.separator" />
     <div [class]="model.cssClasses.progress" *ngIf="model.isRangeShowing && model.isProgressBottomShowing">
-      <div
-        [class]="model.cssClasses.progressBar"
-        [style]="{ width: model.progress }"
-        role="progressbar"
-      ></div>
+      <div [class]="model.cssClasses.progressBar" [style]="{ width: model.progress }" role="progressbar"></div>
     </div>
     <div *ngIf="model.footerToolbar.visibleActions.length" [class]="model.cssClasses.footerButtonsContainer">
       <sv-ng-action-bar [model]="model.footerToolbar"></sv-ng-action-bar>
@@ -48,13 +47,9 @@
       <div [class]="model.cssClasses.progressContainer">
         <sv-ng-paneldynamic-prev-btn [data]="{ question: model }"></sv-ng-paneldynamic-prev-btn>
         <div [class]="model.cssClasses.progress" *ngIf="model.isRangeShowing">
-          <div
-            [class]="model.cssClasses.progressBar"
-            [style]="{ width: model.progress }"
-            role="progressbar"
-          ></div>
+          <div [class]="model.cssClasses.progressBar" [style]="{ width: model.progress }" role="progressbar"></div>
         </div>
-          <sv-ng-paneldynamic-next-btn [data]="{ question: model }"></sv-ng-paneldynamic-next-btn>
+        <sv-ng-paneldynamic-next-btn [data]="{ question: model }"></sv-ng-paneldynamic-next-btn>
       </div>
       <sv-ng-paneldynamic-add-btn [data]="{ question: model }"></sv-ng-paneldynamic-add-btn>
       <sv-ng-paneldynamic-progress-text [data]="{ question: model }"></sv-ng-paneldynamic-progress-text>
