--- a/src/defaultV2-theme/blocks/sd-element.scss
+++ b/src/defaultV2-theme/blocks/sd-element.scss
@@ -185,18 +185,6 @@
   animation-delay: $element-move-out-delay, 0s;
 }
 
-@keyframes paddingFadeIn {
-  from {
-    padding-top: 0;
-    padding-bottom: 0;
-  }
-
-  to {
-    padding-bottom: var(--animation-padding-bottom);
-    padding-top: var(--animation-padding-top);
-  }
-}
-
 .sd-element__content {
   box-sizing: border-box;
 }
@@ -207,25 +195,23 @@
 }
 
 .sd-element__content--fade-in {
-  animation-name: fadeIn, moveIn, paddingFadeIn, overflowIn;
+  animation-name: fadeIn, moveInWithOverflow, paddingFadeIn;
   min-height: 0 !important;
   opacity: 0;
   animation-fill-mode: forwards;
   animation-timing-function: $ease-out;
-  animation-duration: $expand-fade-in-duration, $expand-move-in-duration, $expand-move-in-duration,
-    $expand-move-in-duration;
-  animation-delay: $expand-fade-in-delay, 0s, 0s, 0s;
+  animation-duration: $expand-fade-in-duration, $expand-move-in-duration, $expand-move-in-duration;
+  animation-delay: $expand-fade-in-delay, 0s, 0s;
 }
 
 .sd-element__content--fade-out {
-  animation-name: fadeIn, moveIn, paddingFadeIn, overflowIn;
+  animation-name: fadeIn, moveInWithOverflow, paddingFadeIn;
   min-height: 0 !important;
   animation-direction: reverse;
   animation-fill-mode: forwards;
   animation-timing-function: $reverse-ease-out;
-  animation-duration: $collapse-fade-out-duration, $collapse-move-out-duration, $collapse-move-out-duration,
-    $expand-move-in-duration;
-  animation-delay: 0s, $collapse-move-out-delay, $collapse-move-out-delay, $collapse-move-out-delay;
+  animation-duration: $collapse-fade-out-duration, $collapse-move-out-duration, $collapse-move-out-duration;
+  animation-delay: 0s, $collapse-move-out-delay, $collapse-move-out-delay;
 }
 
 .sd-element--expandable.sd-elemenet--expandable--animating {
@@ -273,16 +259,26 @@
     }
   }
 
-  &.sd-element--complex {
+  &.sd-element--complex:not(.sd-question--empty) {
     & > .sd-element__header--location-top:after {
       display: block;
-      animation-name: fadeIn;
+      opacity: 0;
+      height: 0;
+      --animation-height: 1px;
+      animation-name: fadeIn, moveIn;
       animation-fill-mode: forwards;
-      animation-duration: $transition-duration;
+      animation-timing-function: $ease-out;
+      animation-delay: $expand-fade-in-delay, 0s;
+      animation-duration: $expand-fade-in-duration, $expand-move-in-duration;
     }
 
     &.sd-element--collapsed .sd-element__header--location-top:after {
       animation-direction: reverse;
+      opacity: 1;
+      height: 1px;
+      animation-timing-function: $reverse-ease-out;
+      animation-delay: 0s, $collapse-move-out-delay;
+      animation-duration: $collapse-fade-out-duration, $collapse-move-out-duration;
     }
   }
 }
