--- a/src/common-styles/sv-list.scss
+++ b/src/common-styles/sv-list.scss
@@ -76,7 +76,7 @@
 
 .sv-list__item:hover,
 .sv-list__item:focus {
-  .sv-list__item-body {
+  & > .sv-list__item-body {
     background-color: $background-dark;
   }
 
