#8161 Question title linebreaks does not work Fixes #8161

--- a/src/defaultV2-theme/blocks/sd-element.scss
+++ b/src/defaultV2-theme/blocks/sd-element.scss
@@ -60,6 +60,9 @@
 
   .sv-string-viewer {
     white-space: normal;
+    &.sv-string-viewer--multiline {
+      white-space: pre-wrap;
+    }
   }
 }
 
