#8164 File icon size Fixes #8164

--- a/src/defaultV2-theme/blocks/sd-file.scss
+++ b/src/defaultV2-theme/blocks/sd-file.scss
@@ -197,7 +197,7 @@
 
   .sd-file__default-image {
     width: calcSize(7);
-    height: 90px;
+    height: calcSize(8.5);
   }
 
   img:hover+.sd-file__remove-file-button,
