--- a/src/knockout/components/list/list-item-group.html
+++ b/src/knockout/components/list/list-item-group.html
@@ -1,6 +1,6 @@
 <div data-bind="attr: { disabled: $data.item.enabled !== undefined && !ko.unwrap($data.item.enabled), title: $data.item.tooltip || $data.item.title, 'role': $data.item.ariaRole }">
   <!-- ko if: $data.item.iconName -->
-  <!-- ko component: { name: "sv-svg-icon", params: { iconName: $data.item.iconName, size: $data.item.iconSize, css: $data.item.model.cssClasses.itemIcon } }-->
+  <!-- ko component: { name: "sv-svg-icon", params: { iconName: $data.item.iconName, size: $data.item.iconSize, css: $data.item.cssClasses.itemIcon } }-->
   <!-- /ko -->
   <!-- /ko -->
   <!-- ko template: { name: 'survey-string', data: $data.item.locTitle } --><!-- /ko -->
