--- a/packages/survey-angular-ui/src/components/rating/rating-item.component.html
+++ b/packages/survey-angular-ui/src/components/rating/rating-item.component.html
@@ -2,7 +2,7 @@
   <label [class]="model.getItemClassByText(item.itemValue, item.text)" (mousedown)="model.onMouseDown()">
     <input type="radio"
       class="sv-visuallyhidden"
-      [attr.name]="model.name" [attr.id]="model.getInputId(index)" [value]="item.value" [attr.aria-required]="model.ariaRequired" [attr.aria-label]="model.ariaLabel" [attr.aria-invalid]="model.ariaInvalid" [attr.aria-errormessage]="model.ariaErrormessage"
+      [attr.name]="model.questionName" [attr.id]="model.getInputId(index)" [value]="item.value" [attr.aria-required]="model.ariaRequired" [attr.aria-label]="model.ariaLabel" [attr.aria-invalid]="model.ariaInvalid" [attr.aria-errormessage]="model.ariaErrormessage"
       [disabled]="model.isInputReadOnly" [checked]="model.value === item.value" (click)="onClick($event)"
       />
       <span [class]="model.cssClasses.itemText" [model]="item.locText" sv-ng-string></span>
