--- a/packages/survey-angular-ui/src/errors.component.html
+++ b/packages/survey-angular-ui/src/errors.component.html
@@ -1,3 +1,3 @@
 <ng-container *ngFor="let error of element.errors;">
-  <ng-template [component]="{ name: element.survey.questionErrorComponent, data: { cssClasses: element.cssClasses, error: error } }"></ng-template>
+  <ng-template [component]="{ name: element.survey.questionErrorComponent, data: { element: element, cssClasses: element.cssClasses, error: error } }"></ng-template>
 </ng-container>
