Implemented #8189 - Allow to override question error rendering for a particular survey (#8191)
* Implemented #8189 - Allow to override question error rendering for a particular survey

* Work for #8189 - It is impossible to override question error rendering for a particular survey - try to fix f-tests

* Fixed Vue lint

* Work for #8189 - It is impossible to override question error rendering for a particular survey - passed context element

---------

Co-authored-by: tsv2013 <tsv2013@noreply.github.com>

--- a/packages/survey-angular-ui/src/errors.component.html
+++ b/packages/survey-angular-ui/src/errors.component.html
@@ -1,8 +1,3 @@
-<div *ngFor="let error of element.errors;">
-  <span
-    [class]="element.cssClasses ? element.cssClasses.error.icon : 'panel-error-icon'"
-    aria-hidden="true"
-  ></span>
-  <span [class]="element.cssClasses ? element.cssClasses.error.item : 'panel-error-item'" [model]="error.locText" sv-ng-string>
-  </span>
-</div>
+<ng-container *ngFor="let error of element.errors;">
+  <ng-template [component]="{ name: element.survey.questionErrorComponent, data: { element: element, cssClasses: element.cssClasses, error: error } }"></ng-template>
+</ng-container>
