#8188 Rating Type Question - stars appear as a dropdown and then back vue2 v1.9.139 Fixes #8188

--- a/src/defaultV2-theme/blocks/sd-rating.scss
+++ b/src/defaultV2-theme/blocks/sd-rating.scss
@@ -355,6 +355,7 @@ legend+sv-ng-rating-item+.sd-rating__item-smiley {
   position: relative;
   width: calcSize(6);
   height: calcSize(6);
+  box-sizing: content-box;
 
   &:not(:first-of-type) {
     padding-left: calcSize(0.5);
