--- a/src/defaultV2-theme/blocks/sd-file.scss
+++ b/src/defaultV2-theme/blocks/sd-file.scss
@@ -223,7 +223,7 @@
     min-width: 100%;
     max-width: 100%;
     overflow: hidden;
-    max-height: calcSize(6);
+    max-height: calcLineHeight(3);
     text-overflow: ellipsis;
     line-height: calcLineHeight(1);
     display: -webkit-box;
